# anders-ersmarker-etteplan

./: .gitignore  DESIGN_NOTES.md  README.md  pyproject.toml
src/anders_ersmarker_etteplan/: cli.py
src/anders_ersmarker_etteplan/data/: gentext.xml  gentext_empty_target.xml  gentext_invalid_xml.xml  gentext_missing_target.xml
