[project]
name = "anders-ersmarker-etteplan"
version = "0.0.0"
description = "Work sample for job application"
requires-python = ">=3.11"
dependencies = []
[project.scripts]
export_translation = "anders_ersmarker_etteplan.cli:main"
[tool.setuptools.package-data]
anders_ersmarker_etteplan = ['data/*']